droping full positioning

--- a/index.html
+++ b/index.html
@@ -1,20 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Logistix Feedback</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="./img/logistix_logo.png">
-    <link rel="stylesheet" href="welcome.css">
-</head>
-<body>
-    <div class="welcome">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Logistix Feedback</title>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="icon" href="./img/logistix_logo.png">
+        <!-- <link rel="stylesheet" href="welcome.css"> -->
+        <link rel="stylesheet" href="main.css">
+    </head>
+
+    <body>
+        <!-- homepage -->
+        <!-- <div class="welcome">
         <img src="./img/logistix_with_fonts.png" alt="Image of Logistix logo with a label below it titlled 'Logixtics'">
 
         <p class="title">YOUR FEEDBACK COUNTS</p>
         <p class="remarks">Thank you for using <strong>logistix</strong> for your business, we would like to know your experience so far in just 5 MINS</p>
-        <button class="begin">Let's Begin</button>
-    </div>
-</body>
+        <button class="begin">Let's begin</button>
+    </div> -->
+
+
+        <!-- form1 -->
+        <div class="container">
+            <div class="left">
+                <div class="goto">Goto</div>
+                <span class="print">FEEDBACK FORM</span>
+            </div>
+
+            <div class="right">
+                <div class="top">
+                    <img src="./img/logistix_with_fonts.png" alt="Image of Logistix logo with a label below it titlled 'Logixtics'">
+                </div>
+
+                <div class="bottom">
+                    <div class="form">
+                        <!-- Hello -->
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </body>
+
 </html>
