--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
         <p class="title">YOUR FEEDBACK COUNTS</p>
         <p class="remarks">Thank you for using <strong>logistix</strong> for your business, we would like to know your experience so far in just 5 MINS</p>
+                        <span class="Terminate"></span>
         <button class="begin">Let's begin</button>
     </div> -->
 
@@ -30,15 +31,21 @@
             </div>
 
             <div class="right">
-                <div class="top">
-                    <img src="./img/logistix_with_fonts.png" alt="Image of Logistix logo with a label below it titlled 'Logixtics'">
-                </div>
+                <!-- <div class="top"> -->
+                <img src="./img/logistix_with_fonts.png" alt="Image of Logistix logo with a label below it titlled 'Logixtics'">
+                <!-- </div> -->
 
-                <div class="bottom">
-                    <div class="form">
-                        <!-- Hello -->
-                    </div>
+                <!-- <div class="bottom"> -->
+                <div class="form">
+                    <!-- Hello -->
+                    <div class="form-content"></div>
                 </div>
+                
+                <div class="buttons">
+                    <button class="back"> Back </button>
+                    <button class="next"> Next </button>
+                </div>
+                <!-- </div> -->
             </div>
 
         </div>
