--- a/index.html
+++ b/index.html
@@ -26,7 +26,27 @@
         <!-- form1 -->
         <div class="container">
             <div class="left">
-                <div class="goto">Goto</div>
+                <div class="goto">
+                    <span>Goto</span>
+                    <div class="button-group">
+                        <button>Q1</button>
+                        <button>Q2</button>
+                        <button>Q3</button>
+                        <button>Q4</button>
+                        <button>Q5</button>
+                        <button>Q6</button>
+                        <button>Q7</button>
+                        <button>Q8</button>
+                        <button>Q9</button>
+                        <button>Q10</button>
+                        <button>Q11</button>
+                        <button>Q12</button>
+                        <button>Q13</button>
+                        <button>Q14</button>
+                        <button>Q15</button>
+                        <button>Q16</button>
+                    </div>
+                </div>
                 <span class="print">FEEDBACK FORM</span>
             </div>
 
