--- a/index.html
+++ b/index.html
@@ -27,24 +27,26 @@
         <div class="container">
             <div class="left">
                 <div class="goto">
-                    <span>Goto</span>
+                    <span class="goto">Goto</span>
                     <div class="button-group">
-                        <button>Q1</button>
-                        <button>Q2</button>
-                        <button>Q3</button>
-                        <button>Q4</button>
-                        <button>Q5</button>
-                        <button>Q6</button>
-                        <button>Q7</button>
-                        <button>Q8</button>
-                        <button>Q9</button>
-                        <button>Q10</button>
-                        <button>Q11</button>
-                        <button>Q12</button>
-                        <button>Q13</button>
-                        <button>Q14</button>
-                        <button>Q15</button>
-                        <button>Q16</button>
+                        <div class="close-top">CLOSE</div>
+                        <button class="q1">Q1</button>
+                        <button class="q2">Q2</button>
+                        <button class="q3">Q3</button>
+                        <button class="q4">Q4</button>
+                        <button class="q5">Q5</button>
+                        <button class="q6">Q6</button>
+                        <button class="q7">Q7</button>
+                        <button class="q8">Q8</button>
+                        <button class="q9">Q9</button>
+                        <button class="q10">Q10</button>
+                        <button class="q11">Q11</button>
+                        <button class="q12">Q12</button>
+                        <button class="q13">Q13</button>
+                        <button class="q14">Q14</button>
+                        <button class="q15">Q15</button>
+                        <button class="q16">Q16</button>
+                        <div class="close-bottom">CLOSE</div>
                     </div>
                 </div>
                 <span class="print">FEEDBACK FORM</span>
