--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
                     <span class="goto">Goto</span>
                     <div class="button-group">
                         <div class="close-top">CLOSE</div>
-                        <button class="q1">Q1</button>
-                        <button class="q2">Q2</button>
-                        <button class="q3">Q3</button>
-                        <button class="q4">Q4</button>
-                        <button class="q5">Q5</button>
-                        <button class="q6">Q6</button>
-                        <button class="q7">Q7</button>
-                        <button class="q8">Q8</button>
-                        <button class="q9">Q9</button>
-                        <button class="q10">Q10</button>
-                        <button class="q11">Q11</button>
-                        <button class="q12">Q12</button>
-                        <button class="q13">Q13</button>
-                        <button class="q14">Q14</button>
-                        <button class="q15">Q15</button>
-                        <button class="q16">Q16</button>
+                        <button class="stage q1">Q1</button>
+                        <button class="stage q2">Q2</button>
+                        <button class="stage q3">Q3</button>
+                        <button class="stage q4">Q4</button>
+                        <button class="stage q5">Q5</button>
+                        <button class="stage q6">Q6</button>
+                        <button class="stage q7">Q7</button>
+                        <button class="stage q8">Q8</button>
+                        <button class="stage q9">Q9</button>
+                        <button class="stage q10">Q10</button>
+                        <button class="stage q11">Q11</button>
+                        <button class="stage q12">Q12</button>
+                        <button class="stage q13">Q13</button>
+                        <button class="stage q14">Q14</button>
+                        <button class="stage q15">Q15</button>
+                        <button class="stage q16">Q16</button>
                         <div class="close-bottom">CLOSE</div>
                     </div>
                 </div>
