--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                 <div class="goto">
                     <span class="goto">Goto</span>
                     <div class="button-group">
-                        <div class="close-top">CLOSE</div>
+                        <div class="close">
+                            <button class="close-top">CLOSE</button>
+                        </div>
                         <button class="stage q1">Q1</button>
                         <button class="stage q2">Q2</button>
                         <button class="stage q3">Q3</button>
@@ -46,7 +48,9 @@
                         <button class="stage q14">Q14</button>
                         <button class="stage q15">Q15</button>
                         <button class="stage q16">Q16</button>
-                        <div class="close-bottom">CLOSE</div>
+                        <div class="close">
+                            <button class="close-bottom">CLOSE</button>
+                        </div>
                     </div>
                 </div>
                 <span class="print">FEEDBACK FORM</span>
@@ -62,7 +66,7 @@
                     <!-- Hello -->
                     <div class="form-content"></div>
                 </div>
-                
+
                 <div class="buttons">
                     <button class="back"> Back </button>
                     <button class="next"> Next </button>
