--- a/index.html
+++ b/index.html
@@ -7,74 +7,20 @@
         <title>Logistix Feedback</title>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
         <link rel="icon" href="./img/logistix_logo.png">
-        <!-- <link rel="stylesheet" href="welcome.css"> -->
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="welcome.css">
+        <script type="text/javascript" src="vue.js"></script>
     </head>
 
     <body>
-        <!-- homepage -->
-        <!-- <div class="welcome">
+        <div class="welcome">
         <img src="./img/logistix_with_fonts.png" alt="Image of Logistix logo with a label below it titlled 'Logixtics'">
 
         <p class="title">YOUR FEEDBACK COUNTS</p>
         <p class="remarks">Thank you for using <strong>logistix</strong> for your business, we would like to know your experience so far in just 5 MINS</p>
                         <span class="Terminate"></span>
-        <button class="begin">Let's begin</button>
-    </div> -->
-
-
-        <!-- form1 -->
-        <div class="container">
-            <div class="left">
-                <div class="goto">
-                    <span class="goto">Goto</span>
-                    <div class="button-group">
-                        <div class="close">
-                            <button class="close-top">CLOSE</button>
-                        </div>
-                        <button class="stage q1">Q1</button>
-                        <button class="stage q2">Q2</button>
-                        <button class="stage q3">Q3</button>
-                        <button class="stage q4">Q4</button>
-                        <button class="stage q5">Q5</button>
-                        <button class="stage q6">Q6</button>
-                        <button class="stage q7">Q7</button>
-                        <button class="stage q8">Q8</button>
-                        <button class="stage q9">Q9</button>
-                        <button class="stage q10">Q10</button>
-                        <button class="stage q11">Q11</button>
-                        <button class="stage q12">Q12</button>
-                        <button class="stage q13">Q13</button>
-                        <button class="stage q14">Q14</button>
-                        <button class="stage q15">Q15</button>
-                        <button class="stage q16">Q16</button>
-                        <div class="close">
-                            <button class="close-bottom">CLOSE</button>
-                        </div>
-                    </div>
-                </div>
-                <span class="print">FEEDBACK FORM</span>
-            </div>
-
-            <div class="right">
-                <!-- <div class="top"> -->
-                <img src="./img/logistix_with_fonts.png" alt="Image of Logistix logo with a label below it titlled 'Logixtics'">
-                <!-- </div> -->
-
-                <!-- <div class="bottom"> -->
-                <div class="form">
-                    <!-- Hello -->
-                    <div class="form-content"></div>
-                </div>
-
-                <div class="buttons">
-                    <button class="back"> Back </button>
-                    <button class="next"> Next </button>
-                </div>
-                <!-- </div> -->
-            </div>
-
-        </div>
+        <button class="begin" @click="router.push(...)">Let's begin</button>
+    </div>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 
 </html>
